deleting garbage code in css

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <h2>Favorite Songs</h2>
         <br>
         <center>
-            <table class="table" cellspacing="0" cellpadding="2">
+            <table cellspacing="0">
                 <thead>
                     <tr>
                         <th>Name:</th>
